<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252422"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-22dp"
        android:fontFamily="@font/adelia"
        android:text="@string/txVSubtitle"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/rdGSizes"
        android:layout_width="91dp"
        android:layout_height="192dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/rdGStyles"
        app:layout_constraintStart_toEndOf="@+id/rdGColors"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdBSize1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/rdBSize1"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="163dp" />

        <RadioButton
            android:id="@+id/rdBSize2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/rdBSize2"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="211dp" />

        <RadioButton
            android:id="@+id/rdBSize3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/rdBSize3"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="259dp" />

        <RadioButton
            android:id="@+id/rdBSize4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/rdBSize4"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="307dp" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/tgBRealTime"
        android:layout_width="94dp"
        android:layout_height="52dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="88dp"
        android:checked="true"
        android:fontFamily="@font/milku"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txVRealTime" />

    <RadioGroup
        android:id="@+id/rdGStyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toEndOf="@+id/rdGSizes"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/chBBold"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/chBStyle1"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="310dp"
            tools:layout_editor_absoluteY="211dp" />

        <CheckBox
            android:id="@+id/chBItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/chBStyle2"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="310dp"
            tools:layout_editor_absoluteY="259dp" />
    </RadioGroup>

    <Switch
        android:id="@+id/swUpperLower"
        style="@style/CustomSwitch"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="435dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="92dp"
        android:background="@android:color/white"
        android:fontFamily="@font/milku"
        android:showText="true"
        android:splitTrack="true"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textOff="@string/tgUppercase"
        android:textOn="@string/tgLowercase"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toEndOf="@+id/tgBRealTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:fontFamily="@font/milku"
        android:text="@string/samplePhrase"
        android:textColor="#f4978e"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txVRealTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/milku"
        android:text="@string/txVRealTime"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tgBRealTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputWord"
        android:layout_width="239dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:fontFamily="@font/milku"
        android:hint="..."
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rdGColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toStartOf="@+id/rdGSizes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdBColor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/rdBColor1"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="163dp" />

        <RadioButton
            android:id="@+id/rdBColor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/rdBColor2"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="211dp" />

        <RadioButton
            android:id="@+id/rdBColor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/rdBColor3"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="259dp" />

        <RadioButton
            android:id="@+id/rdBColor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/milku"
            android:text="@string/rdBColor4"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="307dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/milku"
        android:text="@string/txVTitle"
        android:textColor="#f4978e"
        android:textSize="68sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txVCredits"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/milku"
        android:text="@string/txVCredits"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>